force-app/main/default/objects/SourcingGroupSupplier__c/SourcingGroupSupplier__c.object-meta.xml
<CustomObject>
    <label>Sourcing Group Supplier</label>
    <nameField>
        <displayFormat>SS{YY}{MM}{DD}{0000}</displayFormat>
        <label>Sourcing Group Supplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>