force-app/main/default/objects/SourcingGroupSupplier__c/fields/SourcingGroupLevel1__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group Level1</label>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipLabel>Sourcing Group Suppier</relationshipLabel>
    <relationshipName>SourcingGroupm19K</relationshipName>
    <type>Lookup</type>
</CustomField>