force-app/main/default/objects/SourcingGroupSupplier__c/fields/SourcingGroupLevel2__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group Level2</label>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipLabel>Sourcing Group Suppliers (Sourcing Group Medium)</relationshipLabel>
    <relationshipName>Sourcing_Group_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>