force-app/main/default/objects/SourcingGroupSupplier__c/fields/SourcingGroupLevel3__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Group Level3</label>
    <referenceTo>SourcingGroup__c</referenceTo>
    <relationshipLabel>Sourcing Group Suppliers (Sourcing Group Small)</relationshipLabel>
    <relationshipName>Sourcing_Group_Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>